Update and rename index.htm to index.html

--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <h1>Hello Coursera It's a great course</h1>
+<h2>Let us check the pull request from github to macbook</h2>
 </body>
 </html>
